Include cookie-manager file into head instead of calling to cdn
- Fix issue order of cookie code
- Amended cookie banner

--- a/src/views/includes/cookie-manager/cookie-banner.njk
+++ b/src/views/includes/cookie-manager/cookie-banner.njk
@@ -1,21 +1,33 @@
-<div class="govuk-cookie-banner" id="cm_cookie_notification" aria-label="Cookies on the {{ serviceName }}">
-    <div class="govuk-cookie-banner__message govuk-width-container">
 
-        <div class="govuk-grid-row ">
-            <div class="govuk-grid-column-two-thirds">
-                <h2 class="govuk-cookie-banner__heading govuk-heading-m">Tell us whether you accept cookies</h2>
-                <div class="govuk-cookie-banner__content">
-                    <p>We use <a class="govuk-link" href="/cookies">cookies to collect information</a> about how you use the {{ serviceName }} service. We use this information to make the service work as well as possible.</p>
-                </div>
-            </div>
-        </div>
+<form id="cm_cookie_notification">
+{% set html %}
+  <p>We use some essential cookies to make this service work.</p>
+  <p>We’d also like to use analytics cookies so we can understand how you use the service and make improvements.</p>
+{% endset %}
 
-        <div class="govuk-button-group">
-            <div class="js-show">
-                <button class="govuk-button" type="submit" id="cookie-accept-submit">Accept all cookies</button>
-            </div>
-            <a role="button" class="govuk-button" href="/cookie-preferences">Set cookie preferences</a>
-        </div>
-
-    </div>
-</div>
+{{ govukCookieBanner({
+  ariaLabel: "Cookies on " + serviceName,
+  hidden:hidden,
+  
+  messages: [
+    {
+      headingText: "Cookies on " + serviceName,
+      html: html,
+      actions: [
+        {
+          text: "Set cookie preferences",
+          name: "analytics",
+          href: "/cookie-preferences",
+          classes:"govuk-button"
+          
+        },
+        {
+          text: "Accept all cookies",
+          type: "submit",
+          value:"Accept all"
+        }
+      ]
+    }
+  ]
+}) }}
+</form>
