--- a/src/views/index/cookies.njk
+++ b/src/views/index/cookies.njk
@@ -21,7 +21,7 @@
         <p class="govuk-body">You’ll normally see a message on the site before we store a cookie on your computer.</p>
 
         <p class="govuk-body">Find out more about 
-            <a href="http://www.aboutcookies.org/" class="govuk-link">how to manage cookies.</a>
+            <a target='_blank' href="http://www.aboutcookies.org/" class="govuk-link">how to manage cookies.</a>
         </p>
 
         <h2 class="govuk-heading-l">How cookies are used on the {{ serviceName }}</h2>
@@ -81,18 +81,7 @@
     ],
     [
       {
-        text: "_gat"
-      },
-      {
-        text: "Used to manage the rate at which page view requests are made"
-      },
-      {
-          text: "10 minutes"
-      }
-    ],
-    [
-      {
-          text: "_gid"
+          text: "_ga_XXXXX"
       },
       {
         text: "Used to distinguish between users of the service"
