--- a/src/views/index/cookie-preferences.njk
+++ b/src/views/index/cookie-preferences.njk
@@ -57,7 +57,7 @@
         <p class="govuk-body">They always need to be on.</p>
         <p class="govuk-body"><a href="/cookies">Find out more about cookies on the find a HVT service</a></p>
 
-        <button class="govuk-button" type="submit">Save changes</button>
+        <button class="govuk-button" type="submit" id="save-cookie-preferences">Save changes</button>
     </form>
 
     <h2 class="govuk-heading-l">Third-party and government services</h2>
