Fix styling and order of buttons and GA expiry
- Force gov body font on cookie banner, workaround for assets being
out of date
- Amended order of the button
- Change cookie expiry for GA-XXXX
- Fix no js button

--- a/src/views/index/cookies.njk
+++ b/src/views/index/cookies.njk
@@ -87,7 +87,7 @@
         text: "Used to distinguish between users of the service"
       },
       {
-        text: "24 hours"
+        text: "2 years"
       }
     ]
   ]
