--- a/src/views/includes/cookie-manager/cookie-banner.njk
+++ b/src/views/includes/cookie-manager/cookie-banner.njk
@@ -1,8 +1,8 @@
 
 <form id="cm_cookie_notification">
 {% set html %}
-  <p>We use some essential cookies to make this service work.</p>
-  <p>We’d also like to use analytics cookies so we can understand how you use the service and make improvements.</p>
+  <p class="govuk-body">We use some essential cookies to make this service work.</p>
+  <p class="govuk-body">We’d also like to use analytics cookies so we can understand how you use the service and make improvements.</p>
 {% endset %}
 
 {{ govukCookieBanner({
@@ -15,16 +15,17 @@
       html: html,
       actions: [
         {
+          text: "Accept all cookies",
+          type: "submit",
+          value:"Accept all",
+          attributes: { id: 'cookie-accept-submit' },
+          classes:"js-show"
+        },
+        {
           text: "Set cookie preferences",
           name: "analytics",
           href: "/cookie-preferences",
           classes:"govuk-button",
-          attributes: { id: 'cookie-accept-submit' }
-        },
-        {
-          text: "Accept all cookies",
-          type: "submit",
-          value:"Accept all",
           attributes: { id: 'set-cookie-preferences' }
         }
       ]
