--- a/src/views/includes/cookie-manager/cookie-banner.njk
+++ b/src/views/includes/cookie-manager/cookie-banner.njk
@@ -1,5 +1,5 @@
 
-<form id="cm_cookie_notification">
+<form id="cm_cookie_notification" class="govuk-visually-hidden">
 {% set html %}
   <p class="govuk-body">We use some essential cookies to make this service work.</p>
   <p class="govuk-body">We’d also like to use analytics cookies so we can understand how you use the service and make improvements.</p>
