changes to the content to match the service

--- a/src/views/index/accessibility.njk
+++ b/src/views/index/accessibility.njk
@@ -3,13 +3,13 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h2 class="govuk-heading-l">Accessibility for Book a lorry, bus or trailer annual test (MOT) </h2>
+      <h2 class="govuk-heading-l">Accessibility for Find a test centre for an HGV, bus or trailer MOT </h2>
       <p class="govuk-body">
     This service is part of the wider GOV.UK website. There’s a separate <a href="https://www.gov.uk/help/accessibility-statement" class="govuk-link">accessibility statement for the main GOV.UK website.
     </a>
       </p>
       <p class="govuk-body">
-    This page only contains information about the Book a lorry, bus or trailer annual test (MOT) service, available at <a title "link to the service " href="https://find-test-centre-hgv-bus-trailer-mot.service.gov.uk">https://find-test-centre-hgv-bus-trailer-mot.service.gov.uk/</a>
+    This page only contains information about the Find a test centre for an HGV, bus or trailer MOT service, available at <a title "link to the service " href="https://find-test-centre-hgv-bus-trailer-mot.service.gov.uk">https://find-test-centre-hgv-bus-trailer-mot.service.gov.uk/</a>
       </p>
       <h2 class="govuk-heading-l">Using this service</h2>
       <p class="govuk-body">
