feat: update crown logo and packages
Updated:
- govuk-frontend 3.11.0 -> 3.15.0
- express 4.18.2 -> 4.19.2
- dotenv 8.2.0 -> 10.0.0
- axios 0.21.3 -> 0.28.1
- date-fns 2.17.0 -> 2.28.0
- date-fns-tz 1.1.2 -> 1.2.2

Added 'engines' field to package.json to specify the used node version.

--- a/src/views/layouts/layout.njk
+++ b/src/views/layouts/layout.njk
@@ -56,9 +56,10 @@
     homepageUrl: "https://www.gov.uk",
     containerClasses: "govuk-width-container",
     serviceName: serviceName,
-    serviceUrl: "https://find-test-centre-hgv-bus-trailer-mot.service.gov.uk"
+    serviceUrl: "https://find-test-centre-hgv-bus-trailer-mot.service.gov.uk",
+    useTudorCrown: true
   }) }}
-  
+
 {% endblock %}
 <div class="govuk-width-container ">
 {% set mainClasses = "app-main-class" %}
