print page styling

--- a/src/views/index/privacy.njk
+++ b/src/views/index/privacy.njk
@@ -24,13 +24,13 @@
         </ol>
       </nav>
 
-        <button id="print" class="govuk-button govuk-button--secondary" onClick="window.print();">
+        <button id="print" class="govuk-button govuk-button--secondary npPrint" onClick="window.print();">
             <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAASAgMAAAAvVbb5AAAACVBMVEX///////8KDAwmYEUdAAAAAXRSTlMAQObYZgAAADBJREFUCFtjYOBa1cDAoBkKJFYCCSYwEYpCrAICZCI0FEhkrURmQRRnrYRpW7WqAQAlGR86Ip1rwwAAAABJRU5ErkJggg==" alt="print this page" class="govuk-button__start-icon govuk-!-margin-1">
             Print this page
         </button>
 
     </div>
-      <div class="govuk-grid-column-two-thirds">
+      <div class="govuk-grid-column-two-thirds policy">
 
         <h2 class="govuk-heading-l" id="heading1">1. About this service</h2>
         <p class="govuk-body">The Driver and Vehicle Standards Agency (DVSA) provides this service so that you can find your nearest approved testing facility offering MOTs for Heavy goods vehicles (HGV), buses or trailers. DVSA is an executive agency of the Department for Transport (DfT).</p>
@@ -128,6 +128,7 @@
       </div>
     </div>
 </div>
+
 {% endblock %}
 
 
