--- a/src/views/layouts/layout.njk
+++ b/src/views/layouts/layout.njk
@@ -58,7 +58,7 @@
     serviceName: serviceName,
     serviceUrl: "https://find-test-centre-hgv-bus-trailer-mot.service.gov.uk"
   }) }}
-  
+
 {% endblock %}
 <div class="govuk-width-container ">
 {% set mainClasses = "app-main-class" %}
@@ -101,7 +101,8 @@
           text: "Cookies"
         }
       ]
-    }
+    },
+    classes: "noPrint"
   }) }}
 {% endblock %}
 
