--- a/src/views/index/privacy.njk
+++ b/src/views/index/privacy.njk
@@ -2,133 +2,128 @@
 
 {% extends "layouts/layout.njk" %}
 
-
 {% block content %}
-<div id="printable">
-    <h1 class="govuk-heading-l">Find a test centre for an HGV, bus or trailer MOT: Privacy notice</h1>
-    <div class="govuk-grid-row">
-    <div class="govuk-grid-column-one-third noPrint">
-      <p class="govuk-body">Updated 23 January 2023</p>
-      <nav id="table-of-contents">
-        <ol class="govuk-list govuk-list govuk-list--number">
-            <li><a class="govuk-link" href="#heading1">About this service</a></li>
-            <li><a class="govuk-link" href="#heading2">What data we need</a></li>
-            <li><a class="govuk-link" href="#heading3">Why we need it</a></li>
-            <li><a class="govuk-link" href="#heading4">What we do with it</a></li>
-            <li><a class="govuk-link" href="#heading5">How long we keep your data</a></li>
-            <li><a class="govuk-link" href="#heading6">Where it might go</a></li>
-            <li><a class="govuk-link" href="#heading7">Protecting your data and your rights</a></li>
-            <li><a class="govuk-link" href="#heading8">Automated decision making and profiling</a></li>
-            <li><a class="govuk-link" href="#heading9">Changes to this notice</a></li>
-            <li><a class="govuk-link" href="#heading10">How to contact us</a></li>
-        </ol>
-      </nav>
+<h1 class="govuk-heading-l">Find a test centre for an HGV, bus or trailer MOT: Privacy notice</h1>
+<div class="govuk-grid-row">
+<div class="govuk-grid-column-one-third noPrint">
+  <p class="govuk-body">Updated 23 January 2023</p>
+  <nav id="table-of-contents">
+    <ol class="govuk-list govuk-list govuk-list--number">
+        <li><a class="govuk-link" href="#heading1">About this service</a></li>
+        <li><a class="govuk-link" href="#heading2">What data we need</a></li>
+        <li><a class="govuk-link" href="#heading3">Why we need it</a></li>
+        <li><a class="govuk-link" href="#heading4">What we do with it</a></li>
+        <li><a class="govuk-link" href="#heading5">How long we keep your data</a></li>
+        <li><a class="govuk-link" href="#heading6">Where it might go</a></li>
+        <li><a class="govuk-link" href="#heading7">Protecting your data and your rights</a></li>
+        <li><a class="govuk-link" href="#heading8">Automated decision making and profiling</a></li>
+        <li><a class="govuk-link" href="#heading9">Changes to this notice</a></li>
+        <li><a class="govuk-link" href="#heading10">How to contact us</a></li>
+    </ol>
+  </nav>
 
-        <button id="print" class="govuk-button govuk-button--secondary npPrint" onClick="window.print();">
-            <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAASAgMAAAAvVbb5AAAACVBMVEX///////8KDAwmYEUdAAAAAXRSTlMAQObYZgAAADBJREFUCFtjYOBa1cDAoBkKJFYCCSYwEYpCrAICZCI0FEhkrURmQRRnrYRpW7WqAQAlGR86Ip1rwwAAAABJRU5ErkJggg==" alt="print this page" class="govuk-button__start-icon govuk-!-margin-1">
-            Print this page
-        </button>
+    <button id="print" class="govuk-button govuk-button--secondary npPrint" onClick="window.print();">
+        <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAASAgMAAAAvVbb5AAAACVBMVEX///////8KDAwmYEUdAAAAAXRSTlMAQObYZgAAADBJREFUCFtjYOBa1cDAoBkKJFYCCSYwEYpCrAICZCI0FEhkrURmQRRnrYRpW7WqAQAlGR86Ip1rwwAAAABJRU5ErkJggg==" alt="print this page" class="govuk-button__start-icon govuk-!-margin-1">
+        Print this page
+    </button>
 
-    </div>
-      <div class="govuk-grid-column-two-thirds policy">
-
-        <h2 class="govuk-heading-l" id="heading1">1. About this service</h2>
-        <p class="govuk-body">The Driver and Vehicle Standards Agency (DVSA) provides this service so that you can find your nearest approved testing facility offering MOTs for Heavy goods vehicles (HGV), buses or trailers. DVSA is an executive agency of the Department for Transport (DfT).</p>
-        <p class="govuk-body">The data controller for DVSA is DfT - a data controller determines the reasons and how personal data is processed. For more information see the Information Commissioner’s Office (ICO)
-          <a class="govuk-link" target="_blank" href="https://ico.org.uk/ESDWebPages/Entry/Z7122992">Data Protection Public Register</a>. DfT’s registration number is Z7122992.
-        </p>
-
-        <h2 class="govuk-heading-l" id="heading2">2. What data we need</h2>
-        <p class="govuk-body">If you are using the “Find a test centre” service to locate your nearest testing centre, then we only ask for a postcode.</p>
-        <p class="govuk-body">The legal basis for processing this data is ‘consent’ as you have chosen to use the service to locate your nearest test centre.</p>
-
-        <h4 class="govuk-heading-s">Test centres</h4>
-        <p class="govuk-body">DVSA processes data from companies who wish their business details to be included in the ‘Find a test centre’ search.</p>
-        <p class="govuk-body">The personal data we collect from test centres will include:</p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li>the name of the person completing the entry</li>
-          <li>the name of a nominated contact within the organisation</li>
-          <li>full business name and address, including postcode</li>
-          <li>business email address</li>
-          <li>business telephone number</li>
-        </ul>
-        <p class="govuk-body">For most businesses, the above data will not be classified as personal data other than the individual’s name.</p>
-
-        {{ govukInsetText({
-          html: "To remove your consent, email <a class='govuk-link' href='mailto:enquiries@dvsa.gov.uk'>enquiries@dvsa.gov.uk</a>."
-        }) }}
-
-        <h2 class="govuk-heading-l" id="heading3">3. Why we need it</h2>
-        <p class="govuk-body">We need the test centre data collected as well as the nominated contact to show potential service users how far away from their input postcode the business is and how to make contact.</p>
-        <p class="govuk-body">WWe need a service user’s postcode so that we can show them the nearest 50 test centres to their specified location. This data is not stored.</p>
-
-        <h2 class="govuk-heading-l" id="heading4">4. What we do with it</h2>
-        <p class="govuk-body">We collect, use, and store the data you give us for the reasons set out in this policy.</p>
-        <p class="govuk-body">We will not:</p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li>sell or rent your data to third parties</li>
-          <li>share your data with third parties for marketing purposes</li>
-        </ul>
-
-        <h2 class="govuk-heading-l" id="heading5">5. How long we keep your data</h2>
-        <p class="govuk-body">We will only keep your personal data for as long as it is needed for the reasons set out in this policy or as required by law.</p>
-        <p class="govuk-body">We will hold your personal data for no longer than three years after your feedback.</p>
-
-        <h2 class="govuk-heading-l" id="heading6">6. Where it might go</h2>
-        <p class="govuk-body">Our IT infrastructure and technology has been checked to make sure it’s safe and secure.</p>
-        <p class="govuk-body">All data is held on DVSA servers based in the UK or hosted within cloud servers (Amazon Web Services) in Ireland.</p>
-
-        <h2 class="govuk-heading-l" id="heading7">7. Protecting your data and your rights</h2>
-        <p class="govuk-body">
-          The <a href="https://www.gov.uk/government/organisations/driver-and-vehicle-standards-agency/about/personal-information-charter" class="govuk-link" target="_blank">DVSA personal information charter</a>
-          sets out what steps are taken to protect your data, and the rights you have over your data.
-        </p>
-
-        <h2 class="govuk-heading-l" id="heading8">8. Automated decision making and profiling</h2>
-        <p class="govuk-body">Your data is not subject to automated decision making or profiling as defined in data protection legislation</p>
-
-        <h2 class="govuk-heading-l" id="heading9">9. Changes to this notice</h2>
-        <p class="govuk-body">We may change this privacy notice at our discretion at any time.</p>
-        <p class="govuk-body">When we change this notice, the date on the page will be updated. Any changes to this privacy notice will be applied to you and your data as of the revision date.</p>
-        <p class="govuk-body">We encourage you to periodically review this privacy notice to be informed about how your data is protected.</p>
-
-        <h2 class="govuk-heading-l" id="heading10">10. How to contact us</h2>
-        <p class="govuk-body">If you have any questions about anything in this document or if you consider that your personal data has been misused or mishandled, you can contact the DVSA data protection manager.</p>
-
-        {% set contactDataProtectionManager %}
-          <ul class="govuk-list">
-            <li><strong>DVSA data protection manager</strong></li>
-            <li>Data Protection Manager</li>
-            <li>DVSA</li>
-            <li>1 Unity Square</li>
-            <li>Nottingham</li>
-            <li>NG2 1AY</li>
-          </ul>
-          <ul class="govuk-list">
-            <li>Email</li>
-            <li><a class="govuk-link" href="mailto:information.handling@dvsa.gov.uk">information.handling@dvsa.gov.uk</a></li>
-          </ul>
-        {% endset %}
-
-        {{ govukInsetText({
-          html: contactDataProtectionManager,
-          classes: "contact-container"
-        }) }}
-
-        <p class="govuk-body">
-          <a href="https://www.gov.uk/contact-dvsa" class="govuk-link" target="_blank">Contact DVSA customer services</a>
-          if you have a query that does not relate to how your personal data is used.
-        </p>
-        <p class="govuk-body">You may also <a href="https://webarchive.nationalarchives.gov.uk/ukgwa/20221230133501/https:/ico.org.uk/make-a-complaint/" class="govuk-link" target="_blank"> make a complaint to the Information Commissioner</a>, who is an independent regulator.</p>
-
-        {{ govukInsetText({
-          html: contactInformationCommissionerOffice,
-          classes: "contact-container"
-        }) }}
-      </div>
-    </div>
 </div>
+  <div class="govuk-grid-column-two-thirds policy">
 
+    <h2 class="govuk-heading-l" id="heading1">1. About this service</h2>
+    <p class="govuk-body">The Driver and Vehicle Standards Agency (DVSA) provides this service so that you can find your nearest approved testing facility offering MOTs for Heavy goods vehicles (HGV), buses or trailers. DVSA is an executive agency of the Department for Transport (DfT).</p>
+    <p class="govuk-body">The data controller for DVSA is DfT - a data controller determines the reasons and how personal data is processed. For more information see the Information Commissioner’s Office (ICO)
+      <a class="govuk-link" target="_blank" href="https://ico.org.uk/ESDWebPages/Entry/Z7122992">Data Protection Public Register</a>. DfT’s registration number is Z7122992.
+    </p>
+
+    <h2 class="govuk-heading-l" id="heading2">2. What data we need</h2>
+    <h4 class="govuk-heading-s">Service users</h4>
+    <p class="govuk-body">If you are using the “Find a test centre” service to locate your nearest testing centre, then we only ask for a postcode.</p>
+    <p class="govuk-body">The legal basis for processing this data is ‘consent’ as you have chosen to use the service to locate your nearest test centre.</p>
+
+    <h4 class="govuk-heading-s">Test centres</h4>
+    <p class="govuk-body">DVSA processes data from companies who wish their business details to be included in the ‘Find a test centre’ search.</p>
+    <p class="govuk-body">The personal data we collect from test centres will include:</p>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>the name of the person completing the entry</li>
+      <li>the name of a nominated contact within the organisation</li>
+      <li>full business name and address, including postcode</li>
+      <li>business email address</li>
+      <li>business telephone number</li>
+    </ul>
+    <p class="govuk-body">For most businesses, the above data will not be classified as personal data other than the individual’s name.</p>
+
+    {{ govukInsetText({
+      html: "To remove your consent, email <a class='govuk-link' href='mailto:enquiries@dvsa.gov.uk'>enquiries@dvsa.gov.uk</a>."
+    }) }}
+
+    <h2 class="govuk-heading-l" id="heading3">3. Why we need it</h2>
+    <p class="govuk-body">We need the test centre data collected as well as the nominated contact to show potential service users how far away from their input postcode the business is and how to make contact.</p>
+    <p class="govuk-body">We need a service user’s postcode so that we can show them the nearest 50 test centres to their specified location. This data is not stored.</p>
+
+    <h2 class="govuk-heading-l" id="heading4">4. What we do with it</h2>
+    <p class="govuk-body">We collect, use, and store the data you give us for the reasons set out in this policy.</p>
+    <p class="govuk-body">We will not:</p>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>sell or rent your data to third parties</li>
+      <li>share your data with third parties for marketing purposes</li>
+    </ul>
+
+    <h2 class="govuk-heading-l" id="heading5">5. How long we keep your data</h2>
+    <p class="govuk-body">We will only keep your personal data for as long as it is needed for the reasons set out in this policy or as required by law.</p>
+    <p class="govuk-body">We will hold your personal data for no longer than three years after your feedback.</p>
+
+    <h2 class="govuk-heading-l" id="heading6">6. Where it might go</h2>
+    <p class="govuk-body">Our IT infrastructure and technology has been checked to make sure it’s safe and secure.</p>
+    <p class="govuk-body">All data is held on DVSA servers based in the UK or hosted within cloud servers (Amazon Web Services) in Ireland.</p>
+
+    <h2 class="govuk-heading-l" id="heading7">7. Protecting your data and your rights</h2>
+    <p class="govuk-body">
+      The <a href="https://www.gov.uk/government/organisations/driver-and-vehicle-standards-agency/about/personal-information-charter" class="govuk-link" target="_blank">DVSA personal information charter</a>
+      sets out what steps are taken to protect your data, and the rights you have over your data.
+    </p>
+
+    <h2 class="govuk-heading-l" id="heading8">8. Automated decision making and profiling</h2>
+    <p class="govuk-body">Your data is not subject to automated decision making or profiling as defined in data protection legislation</p>
+
+    <h2 class="govuk-heading-l" id="heading9">9. Changes to this notice</h2>
+    <p class="govuk-body">We may change this privacy notice at our discretion at any time.</p>
+    <p class="govuk-body">When we change this notice, the date on the page will be updated. Any changes to this privacy notice will be applied to you and your data as of the revision date.</p>
+    <p class="govuk-body">We encourage you to periodically review this privacy notice to be informed about how your data is protected.</p>
+
+    <h2 class="govuk-heading-l" id="heading10">10. How to contact us</h2>
+    <p class="govuk-body">If you have any questions about anything in this document or if you consider that your personal data has been misused or mishandled, you can contact the DVSA data protection manager.</p>
+
+    {% set contactDataProtectionManager %}
+      <ul class="govuk-list">
+        <li><strong>DVSA data protection manager</strong></li>
+        <li>Data Protection Manager</li>
+        <li>DVSA</li>
+        <li>1 Unity Square</li>
+        <li>Nottingham</li>
+        <li>NG2 1AY</li>
+      </ul>
+      <ul class="govuk-list">
+        <li>Email</li>
+        <li><a class="govuk-link" href="mailto:information.handling@dvsa.gov.uk">information.handling@dvsa.gov.uk</a></li>
+      </ul>
+    {% endset %}
+
+    {{ govukInsetText({
+      html: contactDataProtectionManager,
+      classes: "contact-container"
+    }) }}
+
+    <p class="govuk-body">
+      <a href="https://www.gov.uk/contact-dvsa" class="govuk-link" target="_blank">Contact DVSA customer services</a>
+      if you have a query that does not relate to how your personal data is used.
+    </p>
+    <p class="govuk-body">You may also <a href="https://webarchive.nationalarchives.gov.uk/ukgwa/20221230133501/https:/ico.org.uk/make-a-complaint/" class="govuk-link" target="_blank"> make a complaint to the Information Commissioner</a>, who is an independent regulator.</p>
+
+    {{ govukInsetText({
+      html: contactInformationCommissionerOffice,
+      classes: "contact-container"
+    }) }}
+  </div>
+</div>
 {% endblock %}
-
-
