add js-show tag to button

--- a/src/views/index/privacy.njk
+++ b/src/views/index/privacy.njk
@@ -22,7 +22,7 @@
     </ol>
   </nav>
 
-    <button id="print" class="govuk-button govuk-button--secondary npPrint" onClick="window.print();">
+    <button id="print" class="govuk-button govuk-button--secondary noPrint js-show" onClick="window.print();">
         <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAASAgMAAAAvVbb5AAAACVBMVEX///////8KDAwmYEUdAAAAAXRSTlMAQObYZgAAADBJREFUCFtjYOBa1cDAoBkKJFYCCSYwEYpCrAICZCI0FEhkrURmQRRnrYRpW7WqAQAlGR86Ip1rwwAAAABJRU5ErkJggg==" alt="print this page" class="govuk-button__start-icon govuk-!-margin-1">
         Print this page
     </button>
