update how to contact

--- a/src/views/index/privacy.njk
+++ b/src/views/index/privacy.njk
@@ -104,8 +104,7 @@
         <li>NG2 1AY</li>
       </ul>
       <ul class="govuk-list">
-        <li>Email</li>
-        <li><a class="govuk-link" href="mailto:information.handling@dvsa.gov.uk">information.handling@dvsa.gov.uk</a></li>
+        <li>Email: <a class="govuk-link" href="mailto:information.handling@dvsa.gov.uk">information.handling@dvsa.gov.uk</a></li>
       </ul>
     {% endset %}
 
