--- a/src/public/scss/privacy.scss
+++ b/src/public/scss/privacy.scss
@@ -3,3 +3,14 @@
   padding-top: 0px !important;
   padding-bottom: 0px !important;
 }
+
+@media print {
+  .noPrint{
+    display:none;
+  }
+
+  .policy{
+    width:100%;
+  }
+
+}
