--- a/src/views/layouts/layout.njk
+++ b/src/views/layouts/layout.njk
@@ -51,15 +51,14 @@
 {% endblock %}
 
 {% block header %}
-
   {{ govukHeader({
     homepageUrl: "https://www.gov.uk",
     containerClasses: "govuk-width-container",
     serviceName: serviceName,
     serviceUrl: "https://find-test-centre-hgv-bus-trailer-mot.service.gov.uk"
   }) }}
-  
 {% endblock %}
+
 <div class="govuk-width-container ">
 {% set mainClasses = "app-main-class" %}
 
@@ -101,7 +100,8 @@
           text: "Cookies"
         }
       ]
-    }
+    },
+    classes: "noPrint"
   }) }}
 {% endblock %}
 
