--- a/src/views/layouts/layout.njk
+++ b/src/views/layouts/layout.njk
@@ -55,8 +55,10 @@
     homepageUrl: "https://www.gov.uk",
     containerClasses: "govuk-width-container",
     serviceName: serviceName,
-    serviceUrl: "https://find-test-centre-hgv-bus-trailer-mot.service.gov.uk"
+    serviceUrl: "https://find-test-centre-hgv-bus-trailer-mot.service.gov.uk",
+    useTudorCrown: true
   }) }}
+
 {% endblock %}
 
 <div class="govuk-width-container ">
