--- a/src/views/layouts/layout.njk
+++ b/src/views/layouts/layout.njk
@@ -78,6 +78,7 @@
 
  <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
 {% block main %}
+<script>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
 {% endblock %}
 
 {% block content %}
