fix: fix deprectaed sass render

--- a/src/views/includes/head.njk
+++ b/src/views/includes/head.njk
@@ -14,7 +14,7 @@
     <script src="{{getAsset('html5shiv.js')}}"></script>
   <![endif]-->
 
-  <link rel="icon" href="{{getAsset('images/favicon.ico')}}" type="image/x-icon"/>
+  <link rel="icon" href="{{getAsset('assets/images/favicon.ico')}}" type="image/x-icon"/>
   <script src="{{getAsset('cookie-manager.js')}}"></script>
 
   {{ gaHeadScript(analytics) }}
