--- a/src/public/scss/search.scss
+++ b/src/public/scss/search.scss
@@ -16,3 +16,8 @@
 .dvsa-no-margin-bottom {
   margin-bottom: 0px !important;
 }
+.dvsa-availability-tag {
+  text-transform: capitalize;
+  font-weight: bold;
+  font-size: smaller;
+}
