set rebrand true on header

--- a/src/views/layouts/layout.njk
+++ b/src/views/layouts/layout.njk
@@ -52,7 +52,8 @@
 {% block header %}
   {{ govukHeader({
     homepageUrl: "https://www.gov.uk",
-    containerClasses: "govuk-width-container"
+    containerClasses: "govuk-width-container",
+    rebrand:true
  }) }}
 {{ govukServiceNavigation({
   serviceName: serviceName,
